--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -13,6 +13,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0" />
       <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
+      <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.3.6" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
     </ItemGroup>
 
